# HotelSystem

./: CMakeLists.txt  README.md  code_part1_models_dao_db.txt  code_part2_logic_ui_utils.txt  config.ini  hotel.db  test_db.cpp  ІНСТРУКЦІЯ_ВХОДУ.txt
include/: utils.h
include/dao/: BookingDAO.h  ClientDAO.h  RoomDAO.h  UserDAO.h
include/db/: DatabaseManager.h
include/logic/: AuthenticationManager.h  HotelManager.h
include/models/: Booking.h  Client.h  Enums.h  Room.h  User.h
include/ui/: Menu.h
src/: main.cpp  utils.cpp
src/dao/: BookingDAO.cpp  ClientDAO.cpp  RoomDAO.cpp  UserDAO.cpp
src/db/: DatabaseManager.cpp
src/logic/: AuthenticationManager.cpp  HotelManager.cpp
src/ui/: Menu.cpp
